Change List.of to Collections.unmodifiableList(Arrays.asList())
This is a java 1.8 project, and List.of is in java 1.9.